# py_event_studies

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml  tests.yml
example/: demo.ipynb
py_event_studies/: __init__.py  _ar_statistic_tests.py  _calibration.py  _car_statistic_tests.py  _data_loader.py  _statistic_tests.py  _utils.py  api.py  data_storage.py  results.py
