[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "py_event_studies" 
version = "0.1.0" 
description = "Event Studies Package for CRSP"
authors = [ "Rémi Genet", "Fabrice Riva"]  
readme = "README.md"  
packages = [{include = "py_event_studies"}]  

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numba = ">=0.60.0"
numpy = ">=1.2,<3.0"
pandas = ">=2.0.0,<3.0.0"
scikit-learn = ">=1.5.1,<2.0.0"
joblib = "^1.4.2"
pyarrow = ">=17.0.0,<18.0.0"
matplotlib = ">=3.8,<4.0"

[tool.poetry.group.excel.dependencies]
openpyxl = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]